src/test/ui/numeric/numeric-cast-no-fix.stderr
error[E0308]: mismatched types
  --> $DIR/numeric-cast-no-fix.rs:10:15
   |
LL |     x_usize > -1_isize;
   |               ^^^^^^^^ expected `usize`, found `isize`
   |
note: `-1_isize` can never fit into `usize`
  --> $DIR/numeric-cast-no-fix.rs:10:15
   |
LL |     x_usize > -1_isize;
   |               ^^^^^^^^

error[E0308]: mismatched types
  --> $DIR/numeric-cast-no-fix.rs:12:14
   |
LL |     x_u128 > -1_isize;
   |              ^^^^^^^^ expected `u128`, found `isize`
   |
note: `-1_isize` can never fit into `u128`
  --> $DIR/numeric-cast-no-fix.rs:12:14
   |
LL |     x_u128 > -1_isize;
   |              ^^^^^^^^

error[E0308]: mismatched types
  --> $DIR/numeric-cast-no-fix.rs:14:13
   |
LL |     x_u64 > -1_isize;
   |             ^^^^^^^^ expected `u64`, found `isize`
   |
note: `-1_isize` can never fit into `u64`
  --> $DIR/numeric-cast-no-fix.rs:14:13
   |
LL |     x_u64 > -1_isize;
   |             ^^^^^^^^

error[E0308]: mismatched types
  --> $DIR/numeric-cast-no-fix.rs:16:13
   |
LL |     x_u32 > -1_isize;
   |             ^^^^^^^^ expected `u32`, found `isize`
   |
note: `-1_isize` can never fit into `u32`
  --> $DIR/numeric-cast-no-fix.rs:16:13
   |
LL |     x_u32 > -1_isize;
   |             ^^^^^^^^

error[E0308]: mismatched types
  --> $DIR/numeric-cast-no-fix.rs:18:13
   |
LL |     x_u16 > -1_isize;
   |             ^^^^^^^^ expected `u16`, found `isize`
   |
note: `-1_isize` can never fit into `u16`
  --> $DIR/numeric-cast-no-fix.rs:18:13
   |
LL |     x_u16 > -1_isize;
   |             ^^^^^^^^

error[E0308]: mismatched types
  --> $DIR/numeric-cast-no-fix.rs:20:12
   |
LL |     x_u8 > -1_isize;
   |            ^^^^^^^^ expected `u8`, found `isize`
   |
help: you can convert `x_u8` from `u8` to `isize`, matching the type of `-1_isize`
   |
LL |     isize::from(x_u8) > -1_isize;
   |     ^^^^^^^^^^^^^^^^^

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0308`.
